dl第三次提交

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>首页</title>
 		<link href="css/base.css" type="text/css" rel="stylesheet"/>
 		<link href="css/common.css" type="text/css" rel="stylesheet"/>
+		<link rel="stylesheet" href="http://at.alicdn.com/t/font_1587983_vgvt2d5gsxk.css">
 	</head>
 	<body>
 		<div class="mwrap">
@@ -16,7 +17,128 @@
 						<li>
 							<a href="javascript:;" class="current">首页</a>
 						</li>
-						<li><a href="javascript:;">物流</a></li>
+						<li>
+							<a href="javascript:;">物流</a>
+							<ul class="nav_two nav_two_bg clearfix" style="width:1300px;margin: 0 auto; left: 0;margin-left: -200%;">
+								<li class="nav_two_wul" >
+									<ul class="wuliu_serv clearfix">
+										<!-- 快递服务 -->
+										<li class="wuliu_kuaidi">
+											<h2><i class="iconfont icon-truck"></i>快递服务</h2>
+											<ul class="nav_two_wuliu clearfix">
+												<li><h3>同城</h3></li>
+												<li><a href="javascript:;">顺丰同城急送</a></li>
+											</ul>
+											<ul class="nav_two_wuliu clearfix">
+												<li><h3>内地及港澳台</h3></li>
+												<li><a href="javascript:;">顺丰即日</a></li>
+												<li><a href="javascript:;">顺丰次晨</a></li>
+												<li><a href="javascript:;">顺丰标快</a></li>
+												<li><a href="javascript:;">顺丰特惠</a></li>
+												<li><a href="javascript:;">E顺递</a></li>
+												<li><a href="javascript:;">重货快运</a></li>
+												<li><a href="javascript:;">重货专运</a></li>
+												<li><a href="javascript:;">重货包裹</a></li>
+												<li><a href="javascript:;">小票零担</a></li>
+												<li><a href="javascript:;">物流普运（港澳地区）</a></li>
+											</ul>
+											<ul class="nav_two_wuliu clearfix">
+												<li><h3>国际</h3></li>
+												<li><a href="javascript:;">国际标快</a></li>
+												<li><a href="javascript:;">国际特惠</a></li>
+												<li><a href="javascript:;">国际小包</a></li>
+												<li><a href="javascript:;">国际重货</a></li>
+												<li><a href="javascript:;">国际电商专递</a></li>
+												<li><a href="javascript:;">海购丰运</a></li>
+												<li><a href="javascript:;">签收确认服务</a></li>
+												<li><a href="javascript:;">海外仓</a></li>
+												<li><a href="javascript:;">前往国际网站</a></li>
+											</ul>
+											<ul class="nav_two_wuliu clearfix">
+												<li><h3>增值服务</h3></li>
+												<li><a href="javascript:;">保价</a></li>
+												<li><a href="javascript:;">委托件</a></li>
+												<li><a href="javascript:;">特安服务</a></li>
+												<li><a href="javascript:;">包装服务</a></li>
+												<li><a href="javascript:;">代收货款</a></li>
+												<li><a href="javascript:;">保鲜服务</a></li>
+												<li><a href="javascript:;">签单返还</a></li>
+												<li><a href="javascript:;">送货上楼</a></li>
+												<li><a href="javascript:;">口令签收</a></li>
+												<li><a href="javascript:;">验货服务</a></li>										
+											</ul>
+											<ul class="nav_two_wuliu clearfix">
+												<li>&nbsp;</li>
+												<li><a href="javascript:;">电子验收</a></li>
+												<li><a href="javascript:;">定时派送</a></li>
+												<li><a href="javascript:;">保单配送</a></li>
+												<li><a href="javascript:;">大件入户</a></li>
+												<li><a href="javascript:;">特殊入仓</a></li>
+												<li><a href="javascript:;">送货服务</a></li>
+												<li><a href="javascript:;">提货服务</a></li>
+												<li><a href="javascript:;">装卸服务</a></li>
+												<li><a href="javascript:;">安装服务</a></li>
+												<li><a href="javascript:;">货物保管</a></li>								
+											</ul>
+											<ul class="nav_two_wuliu clearfix">
+												<li>&nbsp;</li>
+												<li><a href="javascript:;">春节服务</a></li>
+												<li><a href="javascript:;">超长超重</a></li>
+												<li><a href="javascript:;">住宅附加费</a></li>
+												<li><a href="javascript:;">燃油附加费</a></li>
+												<li><a href="javascript:;">原单转寄退回</a></li>
+												<li><a href="javascript:;">国际偏远附加费</a></li>
+												<li><a href="javascript:;">顺丰国际直邮认证服务</a></li>
+											</ul>
+										</li>
+										
+										<!-- 冷运 -->
+										<li class="wuliu_kuaidi">
+											<h2><i class="iconfont icon-truck"></i>冷运服务</h2>
+											<ul class="nav_two_wuliu clearfix">
+												<li><h3>食品服务</h3></li>
+												<li><a href="javascript:;">生鲜速配</a></li>
+												<li><a href="javascript:;">冷运速配</a></li>
+												<li><a href="javascript:;">大闸蟹专递</a></li>
+												<li><a href="javascript:;">冷运到店</a></li>
+												<li><a href="javascript:;">顺丰冷运零担</a></li>
+												<li><a href="javascript:;">冷运专车</a></li>
+												<li><a href="javascript:;">冷运仓储</a></li>	
+											</ul>
+											<ul class="nav_two_wuliu clearfix">
+												<li><h3>医药服务</h3></li>
+												<li><a href="javascript:;">医药安心递</a></li>
+												<li><a href="javascript:;">医药专递</a></li>
+												<li><a href="javascript:;">精温定达</a></li>
+												<li><a href="javascript:;">精温定航</a></li>
+												<li><a href="javascript:;">医药专车</a></li>
+												<li><a href="javascript:;">医药仓储</a></li>
+											</ul>					
+										</li>
+										<!-- 仓储 -->
+										<li class="wuliu_kuaidi">
+											<h2><i class="iconfont icon-cangchu"></i>仓储服务</h2>
+											<ul class="nav_two_wuliu clearfix">
+												<li><h3>仓储服务</h3></li>
+												<li><a href="javascript:;">标准化仓储管理</a></li>
+												<li><a href="javascript:;">仓储核心能力</a></li>							
+											</ul>
+										</li>
+									</ul>			
+								</li>
+								<li class="nav_two_r">
+									<ul class="clearfix">
+											<li><button type="button">我要寄件</button></li>
+											<li><a href="javascript:;">收寄范围查询</a></li>
+											<li><a href="javascript:;">收寄标准查询</a></li>
+											<li><a href="javascript:;">运费时效查询</a></li>
+											<li><a href="javascript:;">其他寄件方式</a></li>
+											<li><button>合作咨询</button></li>
+											<li><button>月结服务平台</button></li>
+									</ul>			
+								</li>
+							</ul>
+						</li>
 						<li><a href="javascript:;">金融</a></li>
 						<li>
 							<a href="javascript:;">成功案例</a>
@@ -27,10 +149,29 @@
 								<li><a href="javascript:;">快消行业</a></li>
 							</ul>
 						</li>
-						<li><a href="javascript:;">服务支持</a></li>
+						<li>
+							<a href="javascript:;">服务支持</a>
+							<ul class="nav_two clearfix" style="width: 305%;">
+								<li class="nav_two_child">
+									<ul>
+										<li><a href="javascript:;">我要寄件</a></li>
+										<li><a href="javascript:;">运单追踪</a></li>
+									</ul>
+								</li>
+								<li class="nav_two_child">
+									<ul>
+										<li><a href="javascript:;">运费时效查询</a></li>
+										<li><a href="javascript:;">收寄范围查询</a></li>
+										<li><a href="javascript:;">服务网点查询</a></li>
+										<li><a href="javascript:;">收寄标准查询</a></li>
+										<li><a href="javascript:;">更多内容查询</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
 						<li>
 							<a href="javascript:;">顺丰控股投资者关系</a>
-							<ul class="nav_two">
+							<ul class="nav_two" style="width: 100%;">
 								<li><a href="javascript:;">公司治理</a></li>
 								<li><a href="javascript:;">公司公告</a></li>
 								<li><a href="javascript:;">定期报告</a></li>
@@ -197,5 +338,4 @@
 			</div>
 			<!-- 尾部结束 -->
 		</div>
-	</body>
 </html>
