--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>首页</title>
 		<link href="css/base.css" type="text/css" rel="stylesheet"/>
 		<link href="css/common.css" type="text/css" rel="stylesheet"/>
+		<link href="css/dlindex.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" href="http://at.alicdn.com/t/font_1587983_vgvt2d5gsxk.css">
 	</head>
 	<body>
@@ -206,11 +207,90 @@
 			<!-- 头部结束 -->
 			<!-- banner开始 -->
 			<div class="banner">
+				<!-- 轮播图 -->
 				<ul class="banner_img">
 					<li><img src="images/IMG20190905_171924.jpg"/></li>
 				</ul>
+				<!-- 运货单查询 -->
+				<div class="bill_number">
+					<div class="bill_search">
+						<input type="search" placeholder="您可以输运单号进行查询"/>
+						<button class="search_icon"></button>
+					</div>
+					<button class="search_bill_number">马上查单</button>
+				
+				</div>
 			</div>
 			<!-- banner结束 -->
+			<!-- content开始 -->
+			<div class="content">
+				<!-- 内容导航 -->
+				<div class="content_nav">
+					<ul class="clearfix">
+						<li>
+							<a href="javascript:;">
+								<i class="content_icon content_search"></i>
+								运单追踪
+							</a>
+						</li>
+						<li>
+							<a href="javascript:;">
+								<i class="content_icon content_sender"></i>
+								我要寄件
+							</a>
+						</li>
+						<li>
+							<a href="javascript:;">
+								<i class="content_icon content_money"></i>
+								运费时效查询
+							</a>
+						</li>
+						<li>
+							<a href="javascript:;">
+								<i class="content_icon content_address"></i>
+								服务网点查询
+							</a>
+						</li>
+						<li>
+							<a href="javascript:;">
+								<i class="content_icon content_sope"></i>
+								收寄范围查询
+							</a>
+						</li>
+					</ul>
+				</div>
+				<!-- 内容导航 -->
+				<!-- 物流和金融的轮播图开始 -->
+				<div class="content_banner wrap">
+					<h2>顺丰全业务介绍</h2>
+					<div class="content_banner_list">
+						<ul class="content_banner_tit">
+							<li class="current"><a href="javascript:;">物流</a></li>
+							<li><a href="javascript:;">金融</a></li>
+						</ul>
+						<ul class="content_banenr_img">
+							<li>
+								<a href="javascript:;">
+									<img src="images/lengyunbusiness-img2.jpg"/>
+									<div class="content_img_tit">
+										<span></span>
+										<p></p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="javascript:;">
+									<img src="images/lengyunbusiness-img2.jpg"/>
+
+								</a>
+							</li>
+						</ul>				
+					</div>
+				</div>
+				<!-- 物流和金融的轮播图结束 -->
+
+			</div>
+			<!-- content结束 -->
 			
 			
 			<!-- 尾部开始 -->
