--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/login.css">
     <script src="./js/jquery.min.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/dlindex.js"></script>
 </head>
 
 <body class="shouye_index">
@@ -304,9 +305,17 @@
         <!-- banner开始 -->
         <div class="banner">
             <!-- 轮播图 -->
-            <ul class="banner_img">
-                <li><img src="images/IMG20190905_171924.jpg" /></li>
-            </ul>
+            <div class="bannerWidt">
+                <a href="javascript:;" class="banner_left" style="display: none;"></a>
+                <ul class="banner_img clearfix">
+                    <li><img src="images/IMG20190905_170942.jpg" /></li>
+                    <li><img src="images/IMG20190905_171924.jpg" /></li>
+                </ul>
+                <ul class="banner_splot clearfix">
+                    <!-- <li class="banner_splot_curr"><a href="javascript:;"></a></li>
+                    <li><a href="javascript:;"></a></li> -->
+                </ul>
+            </div>
             <!-- 运货单查询 -->
             <div class="bill_number">
                 <div class="bill_search">
