--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
             <!-- 返回顶部按钮开始 -->
             <div class="back_top">
                 <div class="wrap">
-                    <div class="back_top_img wrap"></div>
+                    <div class="back_top_img"></div>
                 </div>        
             </div>
             <!-- 返回顶部按钮结束 -->
