--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@
                         </div>
                     </div>
                      <!-- 轮播图 -->
-                     <div class="banner content_banner_lis box_content" style="display: none;">
-                        <div class="bannerWidt content_bannerWidths">
-                            <a href="javascript:;" class="content_left2" style="display: none;"></a>
+                     <div class="banner content_banner_lis box_contents" style="display: none;">
+                        <div class="bannerWidt content_bannerWidth">
+                            <a href="javascript:;" class="content_left" style="display: none;"></a>
                             <ul class="content_img content_img2 clearfix">                          
                                 <li class="contentImg contentImg2">
                                     <ul class="content_banenr_img  content_banenr_img2 clearfix">
@@ -549,7 +549,7 @@
                                 </li>
                                              
                             </ul>
-                            <ul class="banner_splot content_banner_splots clearfix">
+                            <ul class="banner_splot content_banner_splot clearfix">
                                 <!-- <li class="banner_splot_curr"><a href="javascript:;"></a></li>
                                 <li><a href="javascript:;"></a></li> -->
                             </ul>
