dl提交所有页面的头部公共样式

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     <p>意见反馈</p>
                 </div>
                 <div class="warm_tips_tit">
-                    <a href="javascript::">如您对顺丰官网有任何建议和反馈，可留言给我们</a>
+                    <a href="/shunfeng/lxw_idea">如您对顺丰官网有任何建议和反馈，可留言给我们</a>
                 </div>
             </div>
 
